# gpu_monitor

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/gpu_monitor/: gpu_info.py  io.py  main.py  process_handler.py  visualize.py
tests/: test_main.py
tests/test_data/: dummy_script.py
